--- a/static/styles.css
+++ b/static/styles.css
@@ -1,10 +1,16 @@
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #7f5e5ee8; /* Set a light gray background color for the entire page */
-  color: #000000; /* Set a default text color */
+  background-image: url('https://img.freepik.com/free-vector/data-security-technology-background-vector-blue-tone_53876-112201.jpg?t=st=1723821198~exp=1723824798~hmac=908312498882229695c0291dfeec167837b10a422478443340718730adcbc6fc&w=1060'); /* Replace with your image URL */
+    background-size: cover; /* Ensure the image covers the entire screen */
+    background-position: center; /* Center the image */
+    background-attachment: fixed; /* Keep the image fixed during scrolling */
+    background-repeat: no-repeat; /* Prevent image repetition */
+    font-family: Arial, sans-serif;
+    color: #0c0536;
+    margin: 0;
+    padding: 0;
+    height: 100vh; /* Ensure the body takes up the full height of the viewport */
 }
+
 
 .container {
   width: 80%;
@@ -12,13 +18,22 @@ body {
   margin: 0 auto;
   text-align: center;
   padding: 20px;
-  background-color: #22b67d; /* White background color for the container */
+  background-color: #5b568f; /* White background color for the container */
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for better visual separation */
+  box-shadow: 0 px 8px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for better visual separation */
 }
 
-h1, h2 {
-  color: #333; /* Dark text color for headers */
+/* Heading styles */
+h1 {
+  font-family: 'Georgia', 'Times New Roman', 'serif'; /* Use system serif fonts */
+  font-weight: bold; /* Bold weight */
+  color: #000000;
+}
+
+h2 {
+  font-family: 'Gill Sans', 'Sans-serif'; /* Use system serif fonts */
+  font-weight: bold; /* Bold weight */
+  color: #000000;
 }
 
 button {
@@ -54,7 +69,7 @@ button#passwordGenBtn:hover {
 }
 
 button#infoGuideBtn {
-  background-color: #ffc107; /* Yellow background color for the info guide button */
+  background-color: #b77313; /* Yellow background color for the info guide button */
 }
 
 button#infoGuideBtn:hover {
@@ -62,10 +77,8 @@ button#infoGuideBtn:hover {
 }
 
 .content {
-  margin-top: 20px;
-  padding: 20px;
-  background-color: #9bc5ee; /* Light gray background color for the content area */
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  color: #000; /* Dark text color for better readability */
+   background: rgba(245, 250, 110, 0.5); /* Semi-transparent background for better readability */
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
 }
