--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
         </head>
     <body>
         <div class="container">
-            <h1>CyberGame</h1>
-            <button id="quizBtn">MCQ Quiz</button>
+            <h1>THE DIGITAL FORTRESS</h1>
+            <button id="quizBtn">Quiz</button>
             <button id="passwordGenBtn">Password Generator</button>
             <button id="infoGuideBtn">Information Guide</button>
 
