--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,24 @@
             <button id="quizBtn">Quiz</button>
             <button id="passwordGenBtn">Password Generator</button>
             <button id="infoGuideBtn">Information Guide</button>
+            <button id="passwordsstrenghtBtn">Check Password Strength</button>
 
+            
         <div id="content" class="content"></div>
      </div>
+
+     <footer id="footer">
+        <p>&copy; 2024 Cybersecurity Quiz App. All rights reserved.</p>
+        <p></p>
+
+        ]
+        !-- Footer Section on the Right -->
+        <footer id="side-footer">
+            <p><a href="https://example.com/about" target="_blank">About Us</a></p>
+            <p><a href="https://example.com/contact" target="_blank">Contact</a></p>
+            <p><a href="https://example.com/privacy" target="_blank">Privacy Policy</a></p>
+        </footer>
+    
 
         <script src="static/scripts.js"></script>
     </body>
