--- a/templates/index.html
+++ b/templates/index.html
@@ -19,16 +19,11 @@
      </div>
 
      <footer id="footer">
+        <p>THE DIGITAL FORTRESS provide you an interface to ensure a safe and secure working enivorment everytime on the internet </p>
+        <p>you can use be aware by reading our information guide also can play a short quiz</p>
+        <p>Also you can Check the Strengths of Your password and Generate a same one for you</p>
         <p>&copy; 2024 Cybersecurity Quiz App. All rights reserved.</p>
-        <p></p>
-
-        ]
-        !-- Footer Section on the Right -->
-        <footer id="side-footer">
-            <p><a href="https://example.com/about" target="_blank">About Us</a></p>
-            <p><a href="https://example.com/contact" target="_blank">Contact</a></p>
-            <p><a href="https://example.com/privacy" target="_blank">Privacy Policy</a></p>
-        </footer>
+     </footer>
     
 
         <script src="static/scripts.js"></script>
