--- a/static/styles.css
+++ b/static/styles.css
@@ -7,21 +7,21 @@ body {
     font-family: Arial, sans-serif;
     font-style:italic;
     color: #0c0536;
-    margin: 10;
+    margin: 1;
     padding: 0;
     height: 100vh; /* Ensure the body takes up the full height of the viewport */
 }
 
 
 .container {
-  width: 80%;
+  width: 60%;
   max-width: 800px;
   margin: 0 auto;
   text-align: center;
-  padding: 9px;
+  padding: 1%;
+  font-size: 16px;
   background-color: #00bbff; /* White background color for the container */
-  border-radius: 10px;
-  box-shadow: 0 px 8px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for better visual separation */
+  border-radius: 40px;
 }
 
 /* Heading styles */
@@ -36,6 +36,7 @@ h1 {
 h2 {
   font-family: 'Gill Sans', 'Sans-serif'; /* Use system serif fonts */
   font-weight: bold; /* Bold weight */
+  font-size: 18px;
   text-decoration: underline;
   color: #000000;
 }
@@ -54,7 +55,8 @@ button {
   margin: 3%;
   font-size: 17px;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 20px;
+  font-size: 16px;
   transition: background-color 0.3s ease;
 }
 
@@ -88,9 +90,9 @@ button#infoGuideBtn:hover {
 
 .content {
    background: rgba(245, 250, 110, 0.5); /* Semi-transparent background for better readability */
-    padding: 20px;
-    border-radius: 10px;
-    margin-top: 20px;
+    padding: 6px;
+    border-radius: 60px;
+    margin-top: 4px;
 
 }
 button#passwordsstrenghtBtn {
@@ -109,7 +111,7 @@ button#passwordstrengthBtn:hover {
   position: fixed;
   bottom: 0;
   width: 100%;
-  font-size: 7%;
+  font-size: 9%;
 }
 
 #footer p {
