--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('https://wallpapers.com/images/high/world-map-cyber-security-ivcowv89j1g1ff4m.webp'); /* Replace with your image URL */
+  background-image: url('https://img.freepik.com/free-vector/data-security-technology-background-vector-blue-tone_53876-112201.jpg?t=st=1723821198~exp=1723824798~hmac=908312498882229695c0291dfeec167837b10a422478443340718730adcbc6fc&w=1060'); /* Replace with your image URL */
     background-size: cover; /* Ensure the image covers the entire screen */
     background-position: center; /* Center the image */
     background-attachment: fixed; /* Keep the image fixed during scrolling */
