--- a/static/styles.css
+++ b/static/styles.css
@@ -8,7 +8,6 @@ body {
     font-style:italic;
     color: #0c0536;
     margin: 1;
-    font-size: 23%;
     padding: 0;
     height: 100vh; /* Ensure the body takes up the full height of the viewport */
 }
@@ -21,7 +20,7 @@ body {
   text-align: center;
   padding: 1%;
   font-size: 11px;
-  background-color: #98a6a9; /* White background color for the container */
+  background-color: #00bbff; /* White background color for the container */
   border-radius: 10px;
 }
 
@@ -89,10 +88,10 @@ button#infoGuideBtn:hover {
 }
 
 .content {
-   background: rgba(39, 150, 184, 0.5); /* Semi-transparent background for better readability */
+   background: rgba(245, 250, 110, 0.5); /* Semi-transparent background for better readability */
     padding: 0px;
     border-radius: 20px;
-    margin-top: 14px;
+    margin-top: 4px;
 
 }
 button#passwordsstrenghtBtn {
