--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('https://wallpapers.com/images/high/world-map-cyber-security-ivcowv89j1g1ff4m.webp'); /* Replace with your image URL *
+  background-image: url('https://wallpapers.com/images/high/world-map-cyber-security-ivcowv89j1g1ff4m.webp'); /* Replace with your image URL */
     background-size: cover; /* Ensure the image covers the entire screen */
     background-position: center; /* Center the image */
     background-attachment: fixed; /* Keep the image fixed during scrolling */
@@ -7,7 +7,7 @@ body {
     font-family: Arial, sans-serif;
     font-style:italic;
     color: #0c0536;
-    margin: 1;
+    margin: 9;
     font-size: 23%;
     padding: 0;
     height: 100vh; /* Ensure the body takes up the full height of the viewport */
